# base85

./: CMakeLists.txt  LICENSE  README.md
include/: Base85.hpp
include/Base85/: Base85.hpp
source/: Base85-x86.hpp  Base85.cpp  main.cpp
source/Base85/: Base85.cpp
tests/: base85-enc.cpp  base85.cpp
